Add param update_min_dt and update_max_dt so AMCL can update while not moving.

--- a/amcl/cfg/AMCL.cfg
+++ b/amcl/cfg/AMCL.cfg
@@ -16,6 +16,9 @@ gen.add("kld_z", double_t, 0, "Upper standard normal quantile for (1 - p), where
 gen.add("update_min_d", double_t, 0, "Translational movement required before performing a filter update.", .2, 0, 5)
 gen.add("update_min_a", double_t, 0, "Rotational movement required before performing a filter update.", pi/6, 0, 2*pi)
 
+gen.add("update_min_dt", double_t, 0, "Filter update at most this often.", 0.10, 0.01, 1.0)
+gen.add("update_max_dt", double_t, 0, "Filter update at least this often, even if not moving.", 0.25, 0, 1000.0)
+
 gen.add("resample_interval", int_t, 0, "Number of filter updates required before resampling.", 2, 0, 20)
 
 gen.add("transform_tolerance", double_t, 0, "Time with which to post-date the transform that is published, to indicate that this transform is valid into the future.", .1, 0, 2)
