--- a/amcl/cfg/AMCL.cfg
+++ b/amcl/cfg/AMCL.cfg
@@ -69,6 +69,9 @@ gen.add("odom_alpha3", double_t, 0, "Specifies the expected noise in odometry's 
 gen.add("odom_alpha4", double_t, 0, "Specifies the expected noise in odometry's translation  estimate from the rotational component of the robot's motion.", .2, 0, 10)
 gen.add("odom_alpha5", double_t, 0, "Translation-related noise parameter (only used if model is omni).", .2, 0, 10)
 
+gen.add("odom_min_trans", double_t, 0, "Minimum translation noise parameter.", 0.001, 0, 1.0)
+gen.add("odom_min_rot", double_t, 0, "Minimum rotation noise parameter.", 0.001, 0, 1.0)
+
 gen.add("odom_frame_id", str_t, 0, "Which frame to use for odometry.", "odom")
 gen.add("base_frame_id", str_t, 0, "Which frame to use for the robot base.", "base_link")
 gen.add("global_frame_id", str_t, 0, "The name of the coordinate frame published by the localization system.", "map")
