Add multi_process command to re-run laser N times.

--- a/amcl/cfg/AMCL.cfg
+++ b/amcl/cfg/AMCL.cfg
@@ -19,6 +19,8 @@ gen.add("update_min_a", double_t, 0, "Rotational movement required before perfor
 gen.add("update_min_dt", double_t, 0, "Filter update at most this often.", 0.10, 0.01, 1.0)
 gen.add("update_max_dt", double_t, 0, "Filter update at least this often, even if not moving.", 0.25, 0, 1000.0)
 
+gen.add("multi_process", int_t, 0, "Run laser algorithm N times.", 1, 1, 20)
+
 gen.add("resample_interval", int_t, 0, "Number of filter updates required before resampling.", 2, 0, 20)
 
 gen.add("transform_tolerance", double_t, 0, "Time with which to post-date the transform that is published, to indicate that this transform is valid into the future.", .1, 0, 2)
